Review and adjust code